--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,26 @@ ul{
     overflow: auto;
 }
 
+.playlist > div{
+    position: relative;
+}
+
 /* icona crea playlist */
 .fa-square-plus{
+    margin-bottom: 10px;
     font-size: 35px;
     color: #787a7f;
+}
+
+.add-playlist{
+    margin-left: 5px;
+    position: absolute;
+    top: 25%;
+}
+
+h4{
+    font-size: 15px;
+    margin: 10px 0;
 }
 
 .playlist li{
