--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,12 @@ ul{
     height: calc(100vh - 80px);
 }
 
-/* regole navigatore */
+/* REGOLE NAVIGATORE */
+
 .container nav{
     height: 100%;
     width: 200px;
     padding: 10px;
-    /* DEBUG */
     background-color: #000;
 }
 
@@ -45,6 +45,10 @@ ul{
 #logo-spotify{
     width: 130px;
     margin-bottom: 15px;
+}
+
+.logo-xs{
+    display: none;
 }
 
 .header-nav > div{
@@ -84,7 +88,7 @@ ul{
     top: 25%;
 }
 
-h4{
+#playlist{
     font-size: 15px;
     margin: 10px 0;
 }
@@ -127,8 +131,6 @@ hr{
     width: calc(100% - 200px);
     overflow: auto;
     background-color: #141922;
-    /* DEBUG */
-    /* background-color: blue; */
 }
 
 /* regole bordo superiore trasparente */
@@ -211,7 +213,7 @@ hr{
 }
 
 
-/* regole player  */
+/* REGOLE PLAYER */
 .player{
     display: flex;
     justify-content: space-between;
@@ -222,13 +224,13 @@ hr{
  /* CONTENUTO SINISTRO PLAYER*/
 .content-sx{
     display: flex;
-    flex-basis: 20%;
+    flex-basis: 25%;
     align-items: center;
     margin-left: 10px;
 }
 
 .content-sx > img{
-    max-height: 60%;
+    max-height: 50%;
     margin-right: 10px;
     
 }
@@ -237,19 +239,23 @@ hr{
     font-size: 10px;
 }
 
-.content-sx > div{
+.testo-in-ascolto{
     margin-right: 30px;
+}
+
+.icon-heart-folder{
+    display: flex;
 }
 
 .fa-heart,
 .fa-folder{
-    margin: 10px;
+    margin: 5px;
 }
 
 /* CONTENUTO CENTRALE PLAYER */
 
 .content-center{
-    flex-basis: 60%;
+    flex-basis: 50%;
     text-align: center;
 }
 
@@ -279,7 +285,7 @@ hr{
 }
 
 .barra-caricamento.musica{
-    width: 300px;
+    width: 80%;
 }
 .barra-ascolto{
     height: 3px;
@@ -287,7 +293,7 @@ hr{
 }
 
 .barra-ascolto.musica{
-    width: 50px;
+    width: 25%;
 }
 
 /* CONTENUTO DESTRO PLAYER */
@@ -307,14 +313,15 @@ hr{
 }
 
 .barra-caricamento.volume{
-    width: 100px;
+    width: 50%;
 }
 
 .barra-ascolto.volume{
-    width: 50px;
+    width: 50%;
 }
 
 @media screen and (max-width: 768px) {
+    /* regole card main */
     .row{
         flex-wrap: wrap;
         gap: 10px;
@@ -332,5 +339,89 @@ hr{
         margin: 5px 0;
     }
 
+    /* CONTENUTO DESTRO PLAYER */
+    .barra-caricamento.musica{
+        width: 70%;
+    }
 
+    /* regole player */
+    .testo-in-ascolto{
+        margin-right: 10px;
+    }
+
+    .content-dx i{
+        margin: 5px;
+    }
+}
+
+@media screen and (max-width: 568px){
+    /* regole card main*/
+    .card{
+        width: 45%;
+    }
+
+    .title-song{
+        font-size: 15px;
+    }
+
+    .subtitle-song{
+        font-size: 10px;
+    }
+
+    /* regole player */
+    .icon-heart-folder{
+        display: block;
+    }
+
+    .content-sx span{
+        font-size: 7px;
+    }
+
+    .fa-heart,
+    .fa-folder{
+        margin: 5px;
+    }
+ 
+}
+
+@media screen and (max-width: 530px){
+
+    /* REGOLE NAVIGATORE */
+
+    .container nav{
+        width: 50px;
+    }
+
+    .header-nav{
+        height: calc(100% - 50px);
+    }
+
+    /* regole main */
+    .container main{
+        width: calc(100% - 50px);
+    }
+
+    .logo-xs{
+        display: inline-block;
+        color: #fff;
+        width: 30px;
+        margin-bottom: 10px;
+    }
+
+    #logo-spotify,
+    .text-header,
+    .playlist,
+    .footer-nav span,
+    hr,
+    .nome-utente{
+        display: none;
+    }
+
+    .footer-nav img{
+        margin: 10px auto;
+        display: block;
+    }
+
+    
+        
 }
