--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 }
 
 /* regole generiche */
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 a{
     text-decoration: none;
 }
@@ -36,6 +39,7 @@ ul{
 /* hover CARD */
 .container-img-album:hover .fa-circle-play.hover-play{
     opacity: 1;
+    z-index: 10;
 }
 
 .card:hover img{
